# clion-learning-project

./: CMakeLists.txt  README.md  welcome.cpp
lessons/: change_signature.cpp  collapse.cpp  comment.cpp  completion_basic.cpp  completion_postfix.cpp  completion_stmt.cpp  completion_tab.cpp  completion_type.cpp  context_actions.cpp  duplicate.cpp  extract.cpp  extract_lambda.cpp  hello_clion.cpp  move_code.cpp  move_copy.cpp  multi_select.cpp  rename.cpp  safe_delete.cpp  selection.cpp  unwrap.cpp
