cmake_minimum_required(VERSION 3.23)
project(clion_learning_project)

set(CMAKE_CXX_STANDARD 17)

add_executable(welcome welcome.cpp)
add_executable(context_actions lessons/context_actions.cpp)
add_executable(hello_clion lessons/hello_clion.cpp)
add_executable(selection lessons/selection.cpp)
add_executable(comment lessons/comment.cpp)
add_executable(duplicate lessons/duplicate.cpp)
add_executable(move_code lessons/move_code.cpp)
add_executable(collapse lessons/collapse.cpp)
add_executable(unwrap lessons/unwrap.cpp)
add_executable(multi_select lessons/multi_select.cpp)
