cmake_minimum_required(VERSION 3.23)
project(clion_learning_project)

set(CMAKE_CXX_STANDARD 17)

add_executable(welcome welcome.cpp)
add_executable(context_actions lessons/context_actions.cpp)
add_executable(hello_clion lessons/hello_clion.cpp)
add_executable(selection lessons/selection.cpp)
add_executable(comment lessons/comment.cpp)
add_executable(duplicate lessons/duplicate.cpp)
add_executable(move_code lessons/move_code.cpp)
add_executable(collapse lessons/collapse.cpp)
add_executable(unwrap lessons/unwrap.cpp)
add_executable(multi_select lessons/multi_select.cpp)
add_executable(completion_basic lessons/completion_basic.cpp)
add_executable(completion_postfix lessons/completion_postfix.cpp)
add_executable(completion_stmt lessons/completion_stmt.cpp)
add_executable(completion_tab lessons/completion_tab.cpp)
add_executable(completion_type lessons/completion_type.cpp)
add_executable(rename lessons/rename.cpp)
add_executable(extract lessons/extract.cpp)
add_executable(change_signature lessons/change_signature.cpp)
add_executable(extract_lambda lessons/extract_lambda.cpp)